switching to ProcessBuilder